--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@google-cloud/speech": "^6.6.0",
+    "@google-cloud/text-to-speech": "^5.3.0",
     "@google-cloud/vertexai": "^1.1.0",
     "@mui/material": "^5.14.9",
     "@testing-library/jest-dom": "^5.16.5",
