--- a/backend/package.json
+++ b/backend/package.json
@@ -17,8 +17,10 @@
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "google-auth-library": "^9.10.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
+    "node-fetch": "^3.3.2",
     "uuid": "^9.0.1",
     "validator": "^13.11.0"
   }
