--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,17 +8,29 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@google-cloud/speech": "^6.6.0",
+    "@google-cloud/storage": "^7.11.1",
     "@google-cloud/text-to-speech": "^5.3.0",
     "@google-cloud/vertexai": "^1.1.0",
     "@mui/material": "^5.14.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.1.0",
     "axios": "^1.5.0",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "framer-motion": "^10.16.2",
     "gsap": "^3.12.2",
+    "https-browserify": "^1.0.0",
+    "net-browserify": "^0.2.4",
     "openai": "^4.40.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-fade-in": "^2.0.1",
@@ -27,14 +39,18 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.3",
     "v6": "^0.0.0",
     "validator": "^13.11.0",
+    "vm-browserify": "^1.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
