--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/speech": "^6.6.0",
+    "@google-cloud/storage": "^7.11.1",
     "@google-cloud/text-to-speech": "^5.3.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
@@ -18,6 +20,7 @@
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fluent-ffmpeg": "^2.1.3",
     "google-auth-library": "^9.10.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
