--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@google-cloud/speech": "^6.6.0",
     "@google-cloud/storage": "^7.11.1",
     "@google-cloud/text-to-speech": "^5.3.0",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -26,6 +27,7 @@
     "mongoose": "^7.5.0",
     "node-fetch": "^3.3.2",
     "uuid": "^9.0.1",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "ytdl-core": "^4.11.5"
   }
 }
