--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@google-cloud/speech": "^6.6.0",
     "@google-cloud/storage": "^7.11.1",
     "@google-cloud/text-to-speech": "^5.3.0",
+    "@google-cloud/vertexai": "^1.2.0",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
