--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^18.2.0",
     "react-fade-in": "^2.0.1",
     "react-icons": "^4.10.1",
+    "react-quizlet-flashcard": "^3.0.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
