--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@google-cloud/storage": "^7.11.1",
     "@google-cloud/text-to-speech": "^5.3.0",
     "@google-cloud/vertexai": "^1.2.0",
+    "assemblyai": "^4.4.5",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
@@ -27,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "node-fetch": "^3.3.2",
+    "optiic": "^0.0.21",
     "uuid": "^9.0.1",
     "validator": "^13.11.0",
     "ytdl-core": "^4.11.5"
